# image-processing-optimization

./: BENCHMARKS.md  CMakeLists.txt  README.md
include/: scheduler.h
src/cpu/: utils.cpp
src/cpu/naive/: gaussian.cpp
src/cpu/optimized/: gaussian_cache_aware.cpp  gaussian_simd.cpp  gaussian_simd_impl.cpp  gaussian_threaded.cpp  gaussian_threaded_impl.cpp
src/gpu/kernels/: gaussian_kernel_impl.cu
src/scheduler/: scheduler.cpp
